--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "prepare": "husky || true"
   },
   "dependencies": {
@@ -26,10 +26,11 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "commitlint": "^19.6.1",
-    "lint-staged": "^15.2.11",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
+    "eslint-plugin-react": "^7.37.4",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.11",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
