--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3.2.0",
-    "@types/node": "^20.17.17",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "commitlint": "^19.6.1",
+    "@tailwindcss/postcss": "^4.0.7",
+    "@types/node": "^20.17.19",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "commitlint": "^19.7.1",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-react": "^7.37.4",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.11",
+    "lint-staged": "^15.4.3",
     "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
   }
 }
