--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
+    "generate": "openapi-ts",
     "prepare": "husky install || true"
   },
   "dependencies": {
+    "@hey-api/client-next": "^0.2.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3.2.0",
+    "@hey-api/openapi-ts": "^0.64.4",
     "@tailwindcss/postcss": "^4.0.7",
     "@types/node": "^20.17.19",
     "@types/react": "^19.0.10",
@@ -44,6 +47,7 @@
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.4.3",
     "postcss": "^8.5.2",
