--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3.2.0",
     "@hey-api/openapi-ts": "^0.64.4",
+    "@next/eslint-plugin-next": "^15.1.7",
     "@tailwindcss/postcss": "^4.0.7",
     "@types/node": "^20.17.19",
     "@types/react": "^19.0.10",
@@ -56,5 +57,10 @@
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
