--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
-    "generate": "openapi-ts",
+    "generate": "openapi-typescript http://localhost:5233/openapi/v1.json -o ./src/types/api.d.ts",
     "prepare": "husky install || true"
   },
   "dependencies": {
-    "@hey-api/client-next": "^0.2.1",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -26,6 +25,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
+    "openapi-fetch": "^0.13.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3.2.0",
-    "@hey-api/openapi-ts": "^0.64.4",
     "@next/eslint-plugin-next": "^15.1.7",
     "@tailwindcss/postcss": "^4.0.7",
     "@types/node": "^20.17.19",
@@ -54,6 +53,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.4.3",
+    "openapi-typescript": "^7.6.1",
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
