feat: update client registration and add UI components

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,13 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=perucontrol;Username=root;Password=root"
+    "DefaultConnection": "Host=localhost;Database=perucontrol;Username=admin;Password=adminacide"
   },
   "Jwt": {
     "SecretKey": "YourSuperSecretKeyHereItShouldBeAtLeast32CharactersLong",
     "Issuer": "acide.win",
     "Audience": "acide.win",
-    "ExpirationSeconds": 1,
-    "RefreshExpirationSeconds": 43200
+    "ExpirationSeconds": 86400,
+    "RefreshExpirationSeconds": 432000
   },
   "Logging": {
     "LogLevel": {
