--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.31.1",
-    "astro": "^5.1.5",
-    "sharp": "^0.32.5"
+    "astro": "^5.1.5"
   }
 }
