--- a/backend/src/Deployment/Dockerfile.alpine
+++ b/backend/src/Deployment/Dockerfile.alpine
@@ -30,5 +30,6 @@ COPY --from=build /app/out ./
 COPY --from=build /app/efbundle ./efbundle
 COPY --from=build /app/appsettings.json ./appsettings.json
 COPY Deployment/docker-entrypoint.sh ./docker-entrypoint.sh
+COPY Templates ./Templates
 
 CMD ["./docker-entrypoint.sh"]
