ci: first setup for e2e testing

--- a/backend/src/Deployment/docker-compose.dev.yml
+++ b/backend/src/Deployment/docker-compose.dev.yml
@@ -28,6 +28,7 @@ services:
         condition: service_started
     environment:
       NODE_ENV: "${NODE_ENV}"
+      INTERNAL_BACKEND_URL: "${INTERNAL_BACKEND_URL}"
     networks:
       - proxy
       - perucontrol-network-develop
