ci: jenkins docker paths

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,7 +2,7 @@ services:
   perucontrol-backend-ci-{BUILD_NUMBER}:
     build:
       context: ./backend/src
-      dockerfile: ./backend/src/Deployment/Dockerfile.alpine
+      dockerfile: ./Deployment/Dockerfile.alpine
     container_name: perucontrol-backend-ci-{BUILD_NUMBER}
     restart: never
     depends_on:
@@ -20,7 +20,7 @@ services:
   perucontrol-frontend-ci-{BUILD_NUMBER}:
     build:
       context: ./frontend
-      dockerfile: ./frontend/deployment/Dockerfile
+      dockerfile: ./deployment/Dockerfile
     container_name: perucontrol-frontend-ci-{BUILD_NUMBER}
     restart: never
     depends_on:
