--- a/backend/Tests.E2E/Tests.E2E.csproj
+++ b/backend/Tests.E2E/Tests.E2E.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.50.0" />
     <PackageReference Include="MSTest" Version="3.6.4" />
+    <PackageReference Include="XunitXml.TestLogger" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
