--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -7,7 +7,7 @@ services:
     restart: no
     depends_on:
       perucontrol-db-ci-{BUILD_NUMBER}:
-        condition: service_started
+        condition: service_healthy
     environment:
       ConnectionStrings__DefaultConnection: "Host=perucontrol-db-ci-{BUILD_NUMBER};Database=perucontrol;Username=root;Password=root"
       Jwt__SecretKey: "1234567890"
@@ -37,6 +37,12 @@ services:
     container_name: perucontrol-db-ci-{BUILD_NUMBER}
     restart: no
     shm_size: 128mb
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U root"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
