--- a/backend/src/Deployment/Dockerfile.alpine
+++ b/backend/src/Deployment/Dockerfile.alpine
@@ -5,6 +5,11 @@ WORKDIR /app
 RUN dotnet tool install --global dotnet-ef
 ENV PATH="${PATH}:/root/.dotnet/tools"
 
+# Copy deps file and install
+COPY PeruControl.csproj .
+RUN HUSKY=0 dotnet restore --locked-mode
+
+
 # Copy only what is neccesary for the build,
 # so that small changes dont reset the whole build
 COPY Controllers ./Controllers
@@ -17,7 +22,6 @@ COPY Program.cs .
 COPY PeruControl.csproj .
 COPY appsettings.json .
 
-RUN HUSKY=0 dotnet restore --locked-mode
 
 # Build binary
 RUN HUSKY=0 dotnet publish PeruControl.csproj -c Release -r linux-musl-x64 -o out
