--- a/backend/src/Deployment/env.yaml
+++ b/backend/src/Deployment/env.yaml
@@ -1,7 +1,6 @@
 develop:
   nonsensitive:
     ConnectionStrings__DefaultConnection: "Host=perucontrol-db-develop;Database=perucontrol;Username=root;Password=root"
-    Jwt__SecretKey: "8b13523caf50bbb948dc0d2436ed31e90f8f7c2fefe167d02565897e4242cc6e"
     Jwt__Issuer: "acide.win"
     Jwt__Audience: "acide.win"
     Jwt__ExpirationMinutes: "60"
@@ -9,10 +8,8 @@ develop:
     Logging__LogLevel__Microsoft.AspNetCore: "Warning"
     AllowedHosts: "*"
     INTERNAL_BACKEND_URL: "http://perucontrol-backend-develop:8080"
-  sensitive: []
-    # - DATABASE_URL
-    # - API_KEY
-
+  sensitive:
+    - Jwt__SecretKey
 
 # production:
 #   nonsensitive:
