feat: mapa murino upload - UI & endpoint

--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -14,3 +14,8 @@ Logging__LogLevel__Microsoft.AspNetCore="Warning"
 
 # Hosting
 AllowedHosts="*"
+
+# R2 Configuration
+R2Config__AccountId="your-cloudflare-account-id"
+R2Config__AccessKey="your-access-key"
+R2Config__SecretKey="your-secret-key"
