--- a/backend/src/appsettings.json
+++ b/backend/src/appsettings.json
@@ -15,5 +15,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "R2Config": {
+    "AccountId": "your-cloudflare-account-id",
+    "AccessKey": "your-access-key",
+    "SecretKey": "your-secret-key"
+  },
   "AllowedHosts": "*"
 }
