--- a/backend/src/Deployment/env.yaml
+++ b/backend/src/Deployment/env.yaml
@@ -1,15 +1,16 @@
 develop:
-  nonsensitive:
-    ConnectionStrings__DefaultConnection: "Host=perucontrol-db-develop;Database=perucontrol;Username=root;Password=root"
-    Jwt__Issuer: "acide.win"
-    Jwt__Audience: "acide.win"
-    Jwt__ExpirationMinutes: "60"
-    Logging__LogLevel__Default: "Information"
-    Logging__LogLevel__Microsoft.AspNetCore: "Warning"
-    AllowedHosts: "*"
-    INTERNAL_BACKEND_URL: "http://perucontrol-backend-develop:8080"
-  sensitive:
-    - Jwt__SecretKey
+  backend:
+    nonsensitive:
+      Jwt__Issuer: "acide.win"
+      Jwt__Audience: "acide.win"
+      Jwt__ExpirationSeconds: "1440"
+      Jwt__RefreshExpirationSeconds: "43200"
+      Logging__LogLevel__Default: "Information"
+      Logging__LogLevel__Microsoft.AspNetCore: "Warning"
+      AllowedHosts: "*"
+    sensitive:
+      - ConnectionStrings__DefaultConnection
+      - Jwt__SecretKey
 
 # production:
 #   nonsensitive:
