ci: modern deploy config pt. 2

--- a/backend/src/Deployment/docker-compose.dev.yml
+++ b/backend/src/Deployment/docker-compose.dev.yml
@@ -1,34 +1,28 @@
 services:
   perucontrol-backend-develop:
-    image: docker.io/digitalesacide/perucontrol-backend-develop:latest
+    image: docker.io/digitalesacide/perucontrol-backend-develop:${PERUCONTROL_BACKEND_VERSION:-latest}
     container_name: perucontrol-backend-develop
     restart: unless-stopped
     depends_on:
       perucontrol-db-develop:
         condition: service_started
-    environment:
-      ConnectionStrings__DefaultConnection: "${ConnectionStrings__DefaultConnection}"
-      Jwt__SecretKey: "${Jwt__SecretKey}"
-      Jwt__Issuer: "${Jwt__Issuer}"
-      Jwt__Audience: "${Jwt__Audience}"
-      Jwt__ExpirationMinutes: "${Jwt__ExpirationMinutes}"
-      Logging__LogLevel__Default: "${Logging__LogLevel__Default}"
-      # Logging__LogLevel__Microsoft.AspNetCore: "${Logging__LogLevel__Microsoft.AspNetCore}"
-      AllowedHosts: "${AllowedHosts}"
+    env_file:
+      - .env.backend
     networks:
       - proxy
       - perucontrol-network-develop
 
   perucontrol-frontend-develop:
-    image: docker.io/digitalesacide/perucontrol-frontend-develop:latest
+    image: docker.io/digitalesacide/perucontrol-frontend-develop:${PERUCONTROL_FRONTEND_VERSION:-latest}
     container_name: perucontrol-frontend-develop
     restart: unless-stopped
     depends_on:
       perucontrol-backend-develop:
         condition: service_started
+    env_file:
+      - .env.frontend
     environment:
-      NODE_ENV: "${NODE_ENV}"
-      INTERNAL_BACKEND_URL: "${INTERNAL_BACKEND_URL}"
+      NODE_ENV: "production"
     networks:
       - proxy
       - perucontrol-network-develop
