ci: add r2 env variables

--- a/backend/src/Deployment/env.yaml
+++ b/backend/src/Deployment/env.yaml
@@ -11,12 +11,7 @@ develop:
     sensitive:
       - ConnectionStrings__DefaultConnection
       - Jwt__SecretKey
+      - R2Config__AccountId
+      - R2Config__AccessKey
+      - R2Config__SecretKey
 
-# production:
-#   nonsensitive:
-#     NODE_ENV: production
-#     PORT: 3000
-#     LOG_LEVEL: info
-#   sensitive:
-#     - DATABASE_URL
-#     - API_KEY
