feat: ui improvements

--- a/backend/src/Deployment/env.yaml
+++ b/backend/src/Deployment/env.yaml
@@ -3,8 +3,8 @@ develop:
     nonsensitive:
       Jwt__Issuer: "acide.win"
       Jwt__Audience: "acide.win"
-      Jwt__ExpirationSeconds: "1440"
-      Jwt__RefreshExpirationSeconds: "43200"
+      Jwt__ExpirationSeconds: "1296000"
+      Jwt__RefreshExpirationSeconds: "5184000"
       Logging__LogLevel__Default: "Information"
       Logging__LogLevel__Microsoft.AspNetCore: "Warning"
       AllowedHosts: "*"
