test: quotation creation

--- a/backend/Tests.E2E/Tests.E2E.csproj
+++ b/backend/Tests.E2E/Tests.E2E.csproj
@@ -25,4 +25,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\src\PeruControl.csproj" />
+  </ItemGroup>
 </Project>
