feat: minimal email gen & send

--- a/backend/src/appsettings.json
+++ b/backend/src/appsettings.json
@@ -18,7 +18,16 @@
   "R2Config": {
     "AccountId": "your-cloudflare-account-id",
     "AccessKey": "your-access-key",
-    "SecretKey": "your-secret-key"
+    "SecretKey": "your-secret-key",
   },
-  "AllowedHosts": "*"
+  "EmailConfiguration": {
+    "SmtpServer": "smtp.example.com",
+    "SmtpPort": 465,
+    "UseSsl": true,
+    "SenderName": "My Name",
+    "SenderEmail": "my.email@example.com",
+    "SmtpUsername": "my.email@example.com",
+    "SmtpPassword": "my-app-password-here",
+  },
+  "AllowedHosts": "*",
 }
