fix: deploy envvars config

--- a/backend/src/Deployment/env.yaml
+++ b/backend/src/Deployment/env.yaml
@@ -11,6 +11,14 @@ develop:
     sensitive:
       - ConnectionStrings__DefaultConnection
       - Jwt__SecretKey
+      # Email configuration
+      - EmailConfiguration__SmtpServer
+      - EmailConfiguration__SmtpPort
+      - EmailConfiguration__SenderName
+      - EmailConfiguration__SenderEmail
+      - EmailConfiguration__SmtpUsername
+      - EmailConfiguration__SmtpPassword
+      # Cloudflare R2
       - R2Config__AccountId
       - R2Config__AccessKey
       - R2Config__SecretKey
