feat: send whatsapp message via twilio (templates)

--- a/backend/src/Deployment/env.yaml
+++ b/backend/src/Deployment/env.yaml
@@ -22,4 +22,8 @@ develop:
       - R2Config__AccountId
       - R2Config__AccessKey
       - R2Config__SecretKey
+      # Twilio+Whatsapp
+      - TwilioConfiguration__AccountSid
+      - TwilioConfiguration__AuthToken
+      - TwilioConfiguration__FromNumber
 
