--- a/backend/src/appsettings.json
+++ b/backend/src/appsettings.json
@@ -29,5 +29,10 @@
     "SmtpUsername": "my.email@example.com",
     "SmtpPassword": "my-app-password-here",
   },
+  "TwilioConfiguration": {
+    "AccountSid": "",
+    "AuthToken": "",
+    "FromNumber": "",
+  },
   "AllowedHosts": "*",
 }
