--- a/backend/src/PeruControl.csproj
+++ b/backend/src/PeruControl.csproj
@@ -19,5 +19,6 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.*" />
+    <PackageReference Include="Twilio" Version="7.11.1" />
   </ItemGroup>
 </Project>
