feat: nextjs endpoint for whatsapp attachments

--- a/backend/src/Deployment/env.yaml
+++ b/backend/src/Deployment/env.yaml
@@ -26,4 +26,5 @@ develop:
       - TwilioConfiguration__AccountSid
       - TwilioConfiguration__AuthToken
       - TwilioConfiguration__FromNumber
+      - TwilioConfiguration__FileUrlStart
 
