--- a/backend/src/Properties/launchSettings.json
+++ b/backend/src/Properties/launchSettings.json
@@ -5,8 +5,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      // "applicationUrl": "http://0.0.0.0:5233",
-      "applicationUrl": "http://localhost:5233",
+      "applicationUrl": "http://0.0.0.0:5233",
+      // "applicationUrl": "http://localhost:5233",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
