ci: staging deployment config

--- a/frontend/deployment/env.yaml
+++ b/frontend/deployment/env.yaml
@@ -4,3 +4,9 @@ develop:
       INTERNAL_BACKEND_URL: "http://perucontrol-backend-develop:8080"
     sensitive:
 
+staging:
+  frontend:
+    nonsensitive:
+      INTERNAL_BACKEND_URL: "http://perucontrol-backend-staging:8080"
+    sensitive:
+
