--- a/frontend/deployment/staging/Jenkinsfile
+++ b/frontend/deployment/staging/Jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
         stage("Restart frontend service") {
             steps {
                 script {
-                    def config = readYaml file: 'devops/env.yaml'
+                    def config = readYaml file: 'deployment/env.yaml'
                     def env = config.staging.frontend
 
                     def nonSensitiveVars = env.nonsensitive.collect { k, v -> "${k}=${v}" }
@@ -66,6 +66,8 @@ ${nonSensitiveVars.join('\n')}
 
 # Sensitive variables
 ${sensitiveVars.collect { varName -> "${varName}=\${${varName}}" }.join('\n')}
+
+
 EOF
 EOL
                                 chmod +x ${WORKSPACE}/create_env.sh
