--- a/backend/Infrastructure/PeruControl.Infrastructure.csproj
+++ b/backend/Infrastructure/PeruControl.Infrastructure.csproj
@@ -13,5 +13,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
   </ItemGroup>
 </Project>
