--- a/backend/+devops/Dockerfile.alpine
+++ b/backend/+devops/Dockerfile.alpine
@@ -6,7 +6,7 @@ WORKDIR /app
 # Install fontconfig
 RUN apk add --no-cache fontconfig
 # Copy fonts
-COPY Fonts /usr/local/share/fonts/
+COPY src/Fonts /usr/local/share/fonts/
 # Update font cache
 RUN fc-cache -f -v
 
@@ -22,14 +22,13 @@ RUN mkdir -p /tmp/.config && chmod 777 /tmp/.config
 RUN dotnet tool install --global dotnet-ef
 ENV PATH="${PATH}:/root/.dotnet/tools"
 
-# Copy deps file and install
-COPY PeruControl.csproj .
-RUN HUSKY=0 dotnet restore --locked-mode
-
+# Copy files and install
+COPY Tests.E2E ./Tests.E2E
 COPY Domain ./Domain
 COPY Infrastructure ./Infrastructure
 COPY src ./src
 COPY backend.sln .
+RUN HUSKY=0 dotnet restore --locked-mode
 
 
 # Build binary
@@ -38,6 +37,6 @@ RUN HUSKY=0 dotnet publish src/PeruControl.csproj -c Release -r linux-musl-x64 -
 RUN HUSKY=0 dotnet-ef migrations bundle --project src/PeruControl.csproj -r linux-musl-x64
 
 COPY +devops/docker-entrypoint.sh ./docker-entrypoint.sh
-COPY Templates ./Templates
+COPY src/Templates ./Templates
 
 CMD ["./docker-entrypoint.sh"]
