--- a/backend/+devops/docker-compose.local.yml
+++ b/backend/+devops/docker-compose.local.yml
@@ -4,7 +4,7 @@ services:
     restart: unless-stopped
     build:
       context: ..
-      dockerfile: ./Deployment/Dockerfile.dev
+      dockerfile: ./+devops/Dockerfile.dev
       args:
         USER_ID: ${UID:-1000}
         GROUP_ID: ${GID:-1000}
