fix: use ODS from ms excel as baseline, scale & transform before PDF conversion

--- a/backend/+devops/Dockerfile.dev
+++ b/backend/+devops/Dockerfile.dev
@@ -5,7 +5,8 @@ RUN apk add --no-cache \
     fontconfig \
     libreoffice \
     libreoffice-lang-en_us \
-    libreoffice-lang-es
+    libreoffice-lang-es \
+    openjdk11-jre
 
 # Copy fonts
 COPY ./src/Fonts /usr/local/share/fonts/
