--- a/backend/Infrastructure/PeruControl.Infrastructure.csproj
+++ b/backend/Infrastructure/PeruControl.Infrastructure.csproj
@@ -18,4 +18,7 @@
     />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\PeruControl.Domain.csproj" />
+  </ItemGroup>
 </Project>
