--- a/backend/src/PeruControl.csproj
+++ b/backend/src/PeruControl.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <!-- Reference to the Infra layer -->
     <ProjectReference Include="..\Infrastructure\PeruControl.Infrastructure.csproj" />
+    <!-- Reference to the Application layer -->
+    <ProjectReference Include="..\Application\PeruControl.Application.csproj" />
     <!-- end -->
     <PackageReference Include="AWSSDK.S3" Version="3.7.416.13" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.2.0" />
