feat: actualizar configuración de ESLint y agregar dependencia date-fns-tz

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "always"
-    }
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": "always"
+	},
+	"editor.defaultFormatter": null,
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
+	}
 }
