--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.475.0",
     "next": "^15.3.0",
